--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sagar_yv",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^5.10.2",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
